trivia-game/nohup.out

/var/www/cm/trivia/trivia-game/server.js:2
:q!
^
SyntaxError: Unexpected token :
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:902:3

/var/www/cm/trivia/trivia-game/server.js:2
:q!
^
SyntaxError: Unexpected token :
    at Module._compile (module.js:439:25)
    at Object.Module._extensions..js (module.js:474:10)
    at Module.load (module.js:356:32)
    at Function.Module._load (module.js:312:12)
    at Function.Module.runMain (module.js:497:10)
    at startup (node.js:119:16)
    at node.js:902:3
info: socket.io started
Express server listening on port 8191
http://localhost:8191/
warn: error raised: Error: listen EADDRINUSE
